--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.3",
     "@radix-ui/react-toggle": "^1.1.2",
+    "@types/mapbox-gl": "^3.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -33,7 +34,7 @@
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "leaflet-geosearch": "^4.0.0",
     "lucide-react": "^0.468.0",
-    "mapbox-gl": "^3.8.0",
+    "mapbox-gl": "^3.10.0",
     "mermaid-react": "^0.1.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
