--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,19 +1,22 @@
-Django>=5.0,<5.1
-channels>=4.0.0
-daphne>=4.0.0
-django-cors-headers>=4.3.1
-djangorestframework>=3.14.0
-djangorestframework-simplejwt>=5.3.1
-djangorestframework-gis>=1.0
-psycopg2-binary>=2.9.9
-python-dotenv>=1.0.1
-channels-redis>=4.1.0
-numpy>=1.26.0
-Pillow>=10.0.0
-requests>=2.31.0
+Django==5.0.2
+channels==4.0.0
+channels-redis==4.2.0
+daphne==4.1.0
+django-cors-headers==4.3.1
+django-filter==23.5
+djangorestframework==3.14.0
+djangorestframework-gis==1.0
+djangorestframework-simplejwt==5.3.1
+drf-yasg==1.21.7
+Pillow==10.2.0
+psycopg2-binary==2.9.9
+python-dotenv==1.0.1
+redis==5.0.1
+scipy==1.12.0
+numpy==1.26.4
+requests==2.31.0
 # Additional common dependencies
 pandas>=2.2.0
 pytz>=2024.1
 celery>=5.3.6
-redis>=5.0.1
 gunicorn>=21.2.0 
