--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -24,4 +24,5 @@ gunicorn>=21.2.0
 whitenoise>=6.6.0
 django-storages>=1.14.2
 boto3>=1.34.7
-django-environ>=0.11.2 
+django-environ>=0.11.2
+Faker>=22.5.0 
