--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,21 +21,63 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
+    command: sh -c "python manage.py migrate && daphne -b 0.0.0.0 -p 8000 hurrinet.asgi:application"
     volumes:
-      - ./backend:/app
+      - ./backend/hurrinet:/app/hurrinet
+      - static_volume:/app/staticfiles
+      - media_volume:/app/media
     ports:
       - "8000:8000"
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     environment:
+      - DEBUG=1
+      - DJANGO_SETTINGS_MODULE=hurrinet.settings
       - POSTGRES_DB=hurrinet_db
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=yadmon13
       - POSTGRES_HOST=db
       - POSTGRES_PORT=5432
-      - DJANGO_SETTINGS_MODULE=hurrinet.settings
-      - PYTHONPATH=/app/hurrinet
+      - REDIS_URL=redis://redis:6379/1
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    command: redis-server --appendonly yes
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  nginx:
+    image: nginx:alpine
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - static_volume:/app/staticfiles:ro
+      - media_volume:/app/media:ro
+    ports:
+      - "80:80"
     depends_on:
-      db:
+      web:
         condition: service_healthy
 
 volumes:
   postgres_data:
+  static_volume:
+  media_volume:
+  redis_data:
