--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       dockerfile: Dockerfile
     command: sh -c "python manage.py migrate && daphne -b 0.0.0.0 -p 8000 hurrinet.asgi:application"
     volumes:
-      - ./backend/hurrinet:/app/hurrinet
+      - ./backend:/app
       - static_volume:/app/staticfiles
       - media_volume:/app/media
     ports:
